--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Tigaserver Project 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-12 17:36+0200\n"
-"PO-Revision-Date: 2014-06-12 17:38+0100\n"
+"PO-Revision-Date: 2014-06-13 15:48+0100\n"
 "Last-Translator: John Palmer <johnrbpalmer@gmail.com>\n"
 "Language-Team: MoveLab <johnrbpalmer@gmail.com>\n"
 "Language: \n"
@@ -44,16 +44,16 @@ msgstr "Zonas exploradas"
 
 #: tigamap/views.py:63
 msgid "Adult tiger mosquitoes: Medium and high probability reports"
-msgstr "Avistamientos de mosquito tigre:: Sólo probabilidad media y alta"
+msgstr "Mosquitos tigre: Sólo probabilidad media y alta"
 
 #: tigamap/views.py:66
 msgid "Adult tiger mosquitoes: High probability reports"
-msgstr "Avistamientos de mosquito tigre: Sólo probabilidad alta"
+msgstr "Mosquitos tigre: Sólo probabilidad alta"
 
 #: tigamap/views.py:69
 #: tigamap/views.py:89
 msgid "Adult tiger mosquitoes: All reports"
-msgstr "Avistamientos de mosquito tigre: Todos"
+msgstr "Mosquitos tigre: Todos"
 
 #: tigamap/views.py:74
 msgid "Breeding sites: Storm drains and fountains"
@@ -77,7 +77,7 @@ msgstr "Lugares de cría: Todos"
 
 #: tigamap/templates/tigamap/app.html:47
 msgid "Adult tiger mosquitoes"
-msgstr "Avistamientos de mosquito tigre"
+msgstr "Mosquitos tigre"
 
 #: tigamap/templates/tigamap/app.html:51
 msgid "All reports"
