new translation IDs added and new translation po and mo files inserted from loco

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-12-17 17:03+0000\n"
-"PO-Revision-Date: 2014-12-19 11:49+0000\n"
+"PO-Revision-Date: 2014-12-19 14:57+0000\n"
 "Last-Translator: John Palmer\n"
 "Language-Team: John Palmer\n"
 "Language: English (USA)\n"
@@ -395,9 +395,7 @@ msgstr "Tiger mosquito reports"
 #. Source text: Our website uses cookies. By continuing we assume your permission to deploy cookies. For more information on our site policies, please see our
 #: tigamap/templates/tigamap/app.html:27
 #: tigamap/templates/tigamap/app_new.html:27 loco:5491b78ef1612903df10624e
-msgid ""
-"our-website-uses-cookies-by-continuing-we-assume-your-permission-to-deploy-"
-"cookies-for-more-informat"
+msgid "our-website-uses-cookies"
 msgstr ""
 "Our website uses cookies. By continuing we assume your permission to deploy "
 "cookies. For more information on our site policies, please see our"
