--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-12-17 17:03+0000\n"
-"PO-Revision-Date: 2014-12-19 14:57+0000\n"
+"PO-Revision-Date: 2014-12-19 15:11+0000\n"
 "Last-Translator: John Palmer\n"
 "Language-Team: John Palmer\n"
 "Language: Spanish\n"
@@ -122,6 +122,16 @@ msgstr "Mosquitos tigre: Sólo probabilidad media y alta"
 msgid "adult-tiger-mosquitoes-validated-reports"
 msgstr "Mosquitos tigre: Todos"
 
+#. Source text: Popup Legend
+#: loco:54943e8bf1612903df10a230
+msgid "adult_report_legend_info_title"
+msgstr "Popup Legend"
+
+#. Source text: Color Legend
+#: loco:54943e64f1612903df10a226
+msgid "adult_report_legend_main_title"
+msgstr "Leyenda de colores"
+
 #. Source text: All Photos
 #: tigamap/templates/tigamap/validated_photo_map.html:173 loco:#: 5491b78ff1612903df10626f
 #, fuzzy
@@ -221,7 +231,7 @@ msgstr "Zonas exploradas"
 #. Source text: Number of observations
 #: tigamap/templates/tigamap/coverage_map_new.html:301 loco:#: 5491b78ff1612903df106263
 msgid "coverage_legend_main_title"
-msgstr "Leyenda de colores"
+msgstr "Number of observations"
 
 #. Source text: Assessments of <a href='http://crowdcrafting.org/app/Tigafotos/' target='_blank'>crowdcrafting</a> volunteers
 #: tigamap/templates/tigamap/validated_report_map.html:621 loco:#: 5491b790f1612903df106281
