--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-12-17 17:03+0000\n"
-"PO-Revision-Date: 2015-01-08 11:49+0000\n"
+"PO-Revision-Date: 2015-01-12 10:25+0000\n"
 "Last-Translator: John Palmer\n"
 "Language-Team: John Palmer\n"
 "Language: Spanish\n"
@@ -94,14 +94,14 @@ msgstr "Español"
 msgid "Well"
 msgstr "Pozo"
 
-#. Source text: Tiger Mosquitoes
+#. Source text: Mosquito reports
 #: tigamap/views.py:254 tigamap/views.py:256
 #: tigamap/templates/tigamap/app.html:122
 #: tigamap/templates/tigamap/app_new.html:111 loco:5491b78ef1612903df10624b
 msgid "adult-tiger-mosquitoes"
-msgstr "Mosquitos tigre"
+msgstr "Informes de mosquitos"
 
-#. Source text: Adult tiger mosquitoes: All reports
+#. Source text: Mosquitoes: All reports
 #: tigamap/views.py:181 tigamap/views.py:212 tigamap/views.py:258 loco:#: 5491b78ef1612903df106244
 msgid "adult-tiger-mosquitoes-all-reports"
 msgstr "Informes de mosquitos: Todos"
@@ -125,12 +125,12 @@ msgstr "Mosquitos: Todos"
 #. Source text: Popup Legend
 #: loco:54943e8bf1612903df10a230
 msgid "adult_report_legend_info_title"
-msgstr "Contenido del pop-up"
+msgstr "Contenido del marcador"
 
-#. Source text: Colors
+#. Source text: Markers
 #: loco:54943e64f1612903df10a226
 msgid "adult_report_legend_main_title"
-msgstr "Colores"
+msgstr "Marcadores"
 
 #. Source text: All Photos
 #: tigamap/templates/tigamap/validated_photo_map.html:173 loco:#: 5491b78ff1612903df10626f
@@ -210,18 +210,17 @@ msgstr "Valores agregados"
 msgid "coverage-map"
 msgstr "Zonas exploradas"
 
-#. Source text: <p>The Android version of Tigatrapp includes optional background location tracking. The app records user’s locations at 5 random times each day. It only shows the approximate position (the red squares on the map) in order to maintain user anonymity. Darker squares indicate more user coverage.</p><p>This information is used to identify which areas are being explored and which areas do not, to create specific missions in particular areas, and to learn about general trends of mobility during the summer, related to tiger mosquito dispersion.</p>
+#. Source text: <p>The Android version of Tigatrapp includes optional background location tracking. The app records users' locations at 5 random times each day. It records only the approximate position (red squares on the map) in order to maintain user anonymity.<br /><br />The number of observations in a given square is the accumulated number of positions recorded in that square for all participants. The darker it is, the more an area has been explored.</p>
 #: tigamap/templates/tigamap/coverage_map_new.html:345 loco:#: 5491b78ff1612903df106265
 msgid "coverage_legend_info_blurb"
 msgstr ""
-"<p>La versión Android de Tigatrapp recoge en <em>background</em> (si el "
-"usuario lo permite), 5 datos de posición al día. Solamente se recoge la "
-"posición aproximada (los recuadros rojos del mapa). El color del recuadro "
-"aumenta de intensidad a medida que hay más datos de posición en ese recuadro.</"
-"p><p>Esta información sirve para conocer qué zonas están siendo exploradas y "
-"qué zonas no, así como para crear misiones específicas para zonas concretas y "
-"para conocer tendencias generales de movilidad en verano, relacionadas con la "
-"dispersión del mosquito tigre.</p>"
+"<p>La versi&oacute;n Android de Tigatrapp recoge en background (si el usuario "
+"lo permite), 5 datos de posici&oacute;n al d&iacute;a. Solamente se recoge la "
+"posici&oacute;n aproximada (los recuadros rojos del mapa) para preservar el "
+"anonimato de los participantes.<br /><br />EL n&uacute;mero de observaciones "
+"en un recuadro determinado es el n&uacute;mero acumulado de datos de posici&"
+"oacute;n recogidos en ese recuadro de todos los participantes. Los colores "
+"oscuros indican zonas m&aacute;s exploradas.</p>"
 
 #. Source text: Coverage Information
 #: tigamap/templates/tigamap/coverage_map_new.html:344 loco:#: 5491b78ff1612903df106264
@@ -231,14 +230,14 @@ msgstr "Zonas exploradas"
 #. Source text: Number of observations
 #: tigamap/templates/tigamap/coverage_map_new.html:301 loco:#: 5491b78ff1612903df106263
 msgid "coverage_legend_main_title"
-msgstr "Observaciones"
+msgstr "Número de observaciones"
 
-#. Source text: Assessments of <a href='http://crowdcrafting.org/app/Tigafotos/' target='_blank'>crowdcrafting</a> volunteers
+#. Source text: Assessments at <a href='http://crowdcrafting.org/app/Tigafotos/' target='_blank'>crowdcrafting</a> from volunteers (if photo available)
 #: tigamap/templates/tigamap/validated_report_map.html:621 loco:#: 5491b790f1612903df106281
 msgid "crowd_row_help"
 msgstr ""
-"Evaluación hecha por voluntarios en <a href=\"http://crowdcrafting.org/app/"
-"Tigafotos/\" target=\"_blank\">Crowdcrafting</a>"
+"Evaluación por voluntarios en <a href=\"http://crowdcrafting.org/app/Tigafotos/\" "
+"target=\"_blank\">Crowdcrafting</a> (si hay fotos)"
 
 #. Source text: More responses needed
 #: tigamap/templates/tigamap/validated_report_map.html:431 loco:#: 5491b790f1612903df10627c
@@ -288,16 +287,18 @@ msgstr "Mosquito tigre"
 msgid "expert_cat_unknown"
 msgstr "No se sabe"
 
-#. Source text: Assessment by scientists
+#. Source text: Assessment by scientists (if photo available)
 #: tigamap/templates/tigamap/validated_report_map.html:616 loco:#: 5491b790f1612903df106280
 msgid "expert_row_help"
-msgstr "Evaluación hecha por científicos"
+msgstr "Clasificación hecha por científicos (si hay foto)"
 
-#. Source text: Experts
+#. Source text: <a href="http://atrapaeltigre.com/web/en/citizen-scientist-map/" target="_blank">Experts</a>
 #: tigamap/templates/tigamap/validated_report_map.html:423
 #: tigamap/templates/tigamap/validated_report_map.html:616 loco:#: 5491b790f1612903df10627a
 msgid "expert_row_title"
-msgstr "Expertos"
+msgstr ""
+"<a href=\"http://atrapaeltigre.com/web/el-mapa-del-mosquito-tigre-2014/\" "
+"target=\"_blank\">Expertos</a>"
 
 #. Source text: fix
 #: tigamap/templates/tigamap/coverage_map_new.html:187 loco:#: 5491b78ff1612903df106262
@@ -332,6 +333,11 @@ msgstr "http://atrapaeltigre.com/web/el-mapa-del-mosquito-tigre-2014/"
 msgid "low"
 msgstr "Baja"
 
+#. Source text: http://atrapaeltigre.com/web/en/citizen-scientist-map/
+#: loco:54b3a0b014d725e17b8b4568
+msgid "map_help_url_new"
+msgstr "http://atrapaeltigre.com/web/el-mapa-del-mosquito-tigre-2014/"
+
 #. Source text: Medium
 #: tigamap/templates/tigamap/coverage_map_beta.html:79 loco:#: 5491b78ff1612903df10625f
 #, fuzzy
@@ -349,12 +355,12 @@ msgstr "Sólo probabilidad media y alta"
 msgid "medium-and-high-probability-reports-only"
 msgstr "Sólo probabilidad media y alta"
 
-#. Source text: Mosquitoes
+#. Source text: Only tiger mosquitoes
 #: tigamap/views.py:256 tigamap/templates/tigamap/app_new.html:119 loco:#: 5491b78ef1612903df10624d
 msgid "menu_adults_definite"
-msgstr "Mosquitos"
+msgstr "Solo mosquitos tigre"
 
-#. Source text: Probable tiger mosquitoes
+#. Source text: Possible tiger mosquitoes
 #: tigamap/views.py:254 tigamap/templates/tigamap/app_new.html:117 loco:#: 5491b78ef1612903df10624c
 msgid "menu_adults_prob"
 msgstr "Solo posible mosquito tigre y mosquito tigre"
@@ -380,10 +386,10 @@ msgstr "no"
 msgid "not_sure"
 msgstr "no lo sé"
 
-#. Source text: From experts or users
+#. Source text: From experts or users (optional)
 #: tigamap/templates/tigamap/validated_report_map.html:636 loco:#: 5491b790f1612903df106287
 msgid "notes_row_help"
-msgstr "Añadidas por expertos o participantes"
+msgstr "Añadidas por expertos o participantes (optativo)"
 
 #. Source text: Notes
 #: tigamap/templates/tigamap/validated_report_map.html:636 loco:#: 5491b790f1612903df106286
@@ -414,7 +420,7 @@ msgstr ""
 "para utilizar cookies. Para más información sobre las políticas de nuestro "
 "sitio web, por favor consulta nuestra"
 
-#. Source text: Sent by participants
+#. Source text: Sent by participants (optional)
 #: tigamap/templates/tigamap/validated_report_map.html:631 loco:#: 5491b790f1612903df106285
 msgid "photo_row_help"
 msgstr "Hechas por los participantes (optativo)"
@@ -444,17 +450,17 @@ msgstr "Política de privacidad"
 msgid "privacy-policy-ca0f9a86ca33f1d6baa9051bd7f4ed21"
 msgstr "política de privacidad"
 
-#. Source text: Observer's assessment of <a href='http://atrapaeltigre.com/web/mosquito-tigre/' target='_blank'>the three tiger principles</a>
+#. Source text: Observer's assessment
 #: tigamap/templates/tigamap/validated_report_map.html:626 loco:#: 5491b790f1612903df106283
 msgid "report_row_help"
-msgstr ""
-"Observación de los <a href=\"http://atrapaeltigre.com/web/mosquito-tigre/\" "
-"target=\"_blank\">3 tigre principios</a> hecha por el participante"
+msgstr "Observados por el participante"
 
-#. Source text: Report
+#. Source text: <a href="http://atrapaeltigre.com/web/en/asian-tiger-mosquito/" target="_blank">Tiger principles</a>
 #: tigamap/templates/tigamap/validated_report_map.html:626 loco:#: 5491b790f1612903df106282
 msgid "report_row_title"
-msgstr "Informe"
+msgstr ""
+"<a href=\"http://atrapaeltigre.com/web/mosquito-tigre/\" target=\"_blank\">Tigre "
+"principios</a>"
 
 #. Source text: Storm drain
 #: tigamap/templates/tigamap/site_map.html:192 tigaserver_app/models.py:316 loco:#: 5491b78ff1612903df106269
